# GoIt_PhotoShare

./: README.md  front  main.py  pyproject.toml  requirements.txt  test.db
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 413baaf52dfe_add_transformed_url.py  76ae78eba435_init.py  ad5c67707d93_add_avatar.py  ce25ba473473_init.py  dd1790a41381_init.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/entity/: models.py
src/repository/: comments.py  photos.py  qrcode_generator.py  tags.py  users.py
src/routes/: auth_routes.py  cloudinary_routes.py  comment_routes.py  photo_routes.py  tags.py
src/schemas/: comment_schemas.py  photo_schemas.py  tag_schemas.py  user_schemas.py
src/services/: auth_service.py  cloudinary_service.py  role_service.py  validator.py
templates/: index.html
tests/: conftest.py  test_e2e_auth.py
